@@ -1,3 +1,8 @@
+2012-06-26  Corinna Vinschen  <vinschen@redhat.com>
+
+	* configure.ac (BASEHEAD_LIST): Add _cygwin.h.
+	* configure: Regenerate.
+
 2012-06-25  Kai Tietz  <ktietz@redhat.com>
 
 	* configure.ac (BASEHEAD_LIST): Add additional required basic-
